# vocab-harvester

./: .gitignore  README.md  main.py  pyproject.toml  run.bat  text_to_speech.py
data/: coca_top_lemmas.txt  words.txt
src/: main.py  reverso_client_patched.py  text_to_speech.py
txt/: Dr. Gina Poe： Use Sleep to Enhance Learning, Memory & Emotional State.vtt  Growth_Mindset_Blueprint.txt  The Warren Buffett Pilot Story - The Importance of Making a NOT To Do List.txt
