[tool.poetry]
name = "vocab-harvester"
version = "0.1.0"
description = "Python tool to extract vocabulary from text and generate audio flashcards."
authors = ["iamgm <iamgm@yandex.ru>"]
readme = "README.md"
packages = [{include = "main", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
numpy = "^1.26.4"
nltk = "^3.8.1"
openpyxl = "^3.1.2"
requests = "^2.31.0"
googletrans = "4.0.0-rc1"
reverso-context-api = "^0.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Эта секция говорит Poetry, как запускать твое приложение.
# Это правильный способ для проекта с папкой src.
[tool.poetry.scripts]
start = "main:main"




